--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             line-height: 1.6;
             background-color: #1e1e1e; /* Темный фон */
-            color: #dcdcdc; /* Светлый текст */
+            color: #def5c6; /* Светлый текст */
             margin: 0;
             padding: 20px;
         }
@@ -19,9 +19,11 @@
             color: #569cd6; /* Синий для заголовка */
         }
         h2 {
+            text-align: center;
             color: #569cd6; /* Синий для заголовков */
         }
         pre {
+            text-align: center;
             background-color: #282c34; /* Темный фон для кода */
             color: #dcdcdc; /* Светлый текст для кода */
             padding: 10px;
@@ -31,6 +33,7 @@
             margin: 10px 0;
         }
         code {
+            text-align: center;
             color: #c586c0; /* Лиловый для ключевых слов */
         }
         .comment {
@@ -40,9 +43,11 @@
             color: #ce9178; /* Оранжевый для строк */
         }
         .function {
+            text-align: center;
             color: #dcdcaa; /* Желтый для функций */
         }
         .keyword {
+            text-align: center;
             color: #569cd6; /* Синий для ключевых слов */
         }
         .copy-button {
